--- a/index.html
+++ b/index.html
@@ -814,6 +814,8 @@
 						<form
 							class="needs-validation"
 							autocomplete="off"
+							name="modalForm"
+							data-netlify="true"
 							novalidate
 						>
 							<div class="form-floating mb-3">
