added name attrb to form for netlify

--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
 						>
 							<div class="form-floating mb-3">
 								<input
+                  name="name"
 									type="text"
 									class="form-control rounded-3"
 									id="floatingName"
@@ -836,7 +837,8 @@
 							</div>
 							<div class="form-floating mb-3">
 								<input
-									type="email"
+								name="email"	
+                type="email"
 									class="form-control rounded-3"
 									id="floatingEmail"
 									placeholder="name@example.com"
@@ -852,6 +854,7 @@
 							</div>
 							<div class="form-floating mb-3">
 								<input
+                name="phone"
 									type="tel"
 									class="form-control rounded-3"
 									id="floatingTel"
@@ -869,8 +872,9 @@
 								</div>
 							</div>
 
-							<div class="form-floating mb-3">
+							<div class="f orm-floating mb-3">
 								<textarea
+                name="note"
 									class="form-control"
 									placeholder="Leave a comment here"
 									id="floatingNote"
