added netlify to form

--- a/index.html
+++ b/index.html
@@ -816,9 +816,11 @@
 							autocomplete="off"
 							name="modalForm"
 							novalidate
+							netlify
 						>
 							<div class="form-floating mb-3">
 								<input
+									name="name"
 									type="text"
 									class="form-control rounded-3"
 									id="floatingName"
@@ -835,6 +837,7 @@
 							</div>
 							<div class="form-floating mb-3">
 								<input
+									name="email"
 									type="email"
 									class="form-control rounded-3"
 									id="floatingEmail"
@@ -851,6 +854,7 @@
 							</div>
 							<div class="form-floating mb-3">
 								<input
+									name="phone"
 									type="tel"
 									class="form-control rounded-3"
 									id="floatingTel"
@@ -870,6 +874,7 @@
 
 							<div class="form-floating mb-3">
 								<textarea
+									name="note"
 									class="form-control"
 									placeholder="Leave a comment here"
 									id="floatingNote"
